--- a/cosmos/uni_app/templates/one.html
+++ b/cosmos/uni_app/templates/one.html
@@ -11,7 +11,7 @@
         </div>
 
         <div class="px-5">
-            <p class="my-5">{{one.desc}}</p>
+            <p class="my-5">{{ one.desc|linebreaksbr }}</p>
 
             <div class="row bg-light-reddish my-5 py-3 justify-content-center gap-5 rounded-3 text-center">
                 <div class="col-4 bg-cream rounded-3 py-2">
