--- a/cosmos/uni_app/templates/home.html
+++ b/cosmos/uni_app/templates/home.html
@@ -33,19 +33,19 @@
 <div class="row mb-3 justify-content-center">
     <div class="col-3 mb-4 card h-100">
         <div class="text-center card-body">
-            <a href="{% url 'main:search' %}" class="card-title text-center no-line fs-1 fw-bold color-reddish">Carreras</a>
+            <a href="{% url 'main:search' %}" class="card-title no-line fs-1 fw-bold color-reddish">Carreras</a>
             <p class="card-text fs-6">Explora entre las distintas opciones de carreras universitarias o terciarias y descubre cuál se ajusta a tu vocación y metas profesionales.</p>
         </div>
     </div>
     <div class="col-3 mb-4 card h-100 mx-4">    
         <div class="text-center card-body">
-            <a href="{% url 'main:many' 'cursos' %}" class="card-title text-center no-line fs-1 fw-bold color-reddish">Cursos</a>
+            <a href="{% url 'main:many' 'cursos' %}" class="card-title no-line fs-1 fw-bold color-reddish">Cursos</a>
             <p class="card-text fs-6">Encuentra cursos y capacitaciones en diversas áreas que te ayudarán a complementar tus estudios y así desarrollar nuevas habilidades.</p>
         </div>
     </div>
     <div class="col-3 mb-4 card h-100">    
         <div class="text-center card-body">
-            <a href="{% url 'main:many' 'becas' %}" class="card-title text-center no-line fs-1 fw-bold color-reddish">Becas</a>
+            <a href="{% url 'main:many' 'becas' %}" class="card-title no-line fs-1 fw-bold color-reddish">Becas</a>
             <p class="card-text fs-6">Descubre oportunidades de becas disponibles para financiar tus estudios y alcanzar tus sueños académicos sin preocupaciones económicas.</p>
         </div>
     </div>
