--- a/cosmos/uni_app/templates/one.html
+++ b/cosmos/uni_app/templates/one.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}{% block title %} - {{one}}{% endblock %}
 {% block content %}                          <!-- GETS FROM ctx: carrera -->
 
+    {% load custom_filters %}
+    {% load static %}
+
     {% if type == "unis" %}
 
         <div class="video-container rounded-4 rounded-top-0" style="height: 20rem; width: 100wv;">
@@ -54,7 +57,9 @@
 
         </div>
 
+
     {% elif type == "carreras" %}
+
 
         <div class="video-container rounded-4 rounded-top-0" style="height: 20rem; width: 100wv; border: 1rem double {{one.cat.color}}; border-top: 0;">
             <img src="{{one.uni.imgs.first.img.url}}" alt="{{one}}" class="video-background">
@@ -74,19 +79,19 @@
             {% load custom_filters %}
             <div class="bg-light-reddish row my-5 py-3 justify-content-center gap-5 rounded-3 text-center">
                 <div class="col-3 bg-cream rounded-3 py-2">
-                    <i class="fa-solid fa-file-invoice-dollar fs-1"></i>
+                    <img src="{% static 'svg/file-invoice-dollar-solid.svg' %}" style="height: 2rem;"/>
                     <div>
                         <span class="title fs-3">Precio: </span> {% if not one.is_public %}${{ one.precio|to_int }} pesos{%else%}Sin arancel{%endif%}
                     </div>
                 </div>
                 <div class="col-3 bg-cream rounded-3 py-2">
-                    <i class="fa-solid fa-book-open-reader fs-1"></i>
+                    <img src="{% static 'svg/book-open-reader-solid.svg' %}" style="height: 2rem;"/>
                     <div>
                         <span class="title fs-3">Modalidad: </span>{{one.modalidad}}
                     </div>
                 </div>
                 <div class="col-3 bg-cream rounded-3 py-2">
-                    <i class="fa-solid fa-clock fs-1"></i>
+                    <img src="{% static 'svg/clock-solid.svg' %}" style="height: 2rem;"/>
                     <div>
                         <span class="title fs-3">Duración: </span> {{one.duration}} años
                     </div>
@@ -97,9 +102,9 @@
 
         </div>
 
-        
 
     {% elif type == "cursos" %}
+
 
         <div class="video-container rounded-4 rounded-top-0" style="height: 20rem; width: 100wv; border: 1rem double {{one.cat.color}}; border-top: 0;">
             <img src="{{one.imgs.first.img.url}}" alt="{{one}}" class="video-background">
@@ -114,33 +119,35 @@
 
         <div class="px-5">
             <p class="my-3">{{one.desc}}</p>
-            {% load custom_filters %}
 
             <div class="bg-light-reddish row my-5 py-3 justify-content-center gap-5 rounded-3 text-center">
                 <div class="col-3 bg-cream rounded-3 py-2">
-                    <i class="fa-solid fa-file-invoice-dollar fs-1"></i>
+                    <img src="{% static 'svg/file-invoice-dollar-solid.svg' %}" style="height: 2rem;"/>
                     <div>
                         <span class="title fs-3">Precio:</span> ${{ one.precio|to_int }} pesos<br>
                     </div>
                 </div>
                 <div class="col-3 bg-cream rounded-3 py-2">
-                    <i class="fa-solid fa-book-open-reader fs-1"></i>
+                    <img src="{% static 'svg/book-open-reader-solid.svg' %}" style="height: 2rem;"/>
                     <div>
                         <span class="title fs-3">Modalidad:</span> {{ one.modalidad }}<br>
                     </div>
                 </div>
                 <div class="col-3 bg-cream rounded-3 py-2">
-                    <i class="fa-solid fa-clock fs-1"></i>
+                    <img src="{% static 'svg/clock-solid.svg' %}" style="height: 2rem;"/>
                     <div>
                         <span class="title fs-3">Duración:</span> {{ one.duration }} meses<br>
                     </div>
                 </div>
             </div>
-            <p class=" mt-3 fs-5">Para más información, consulte la página oficial de la institución.</p>
-            <a class="btn btn-styles title fs-3" href="{{ one.enroll }}">Inscribirse</a>
+
+            <a class="btn btn-styles fs-4" href="{{ one.enroll }}">Inscribirse</a>
+            <p class="mt-5 fs-5">Para más información, consulte la página oficial de la institución.</p>
         </div>
 
+
     {% elif type == "becas" %}
+    
 
         <div class="video-container rounded-4 rounded-top-0" style="height: 20rem; width: 100wv;">
             <img src="{{one.uni.imgs.first.img.url}}" alt="{{one}}" class="video-background">
@@ -151,21 +158,22 @@
                 </div>
             </div>
         </div>
-
         
         <div class="px-5">
             <p class="my-3">{{one.desc}}</p>
+
             {% load custom_filters %}
             <div class="bg-light-reddish row my-5 py-3 justify-content-center gap-5 rounded-3 text-center">
                 <div class="col-3 bg-cream rounded-3 py-2">
-                    <i class="fa-solid fa-file-invoice-dollar fs-1"></i>
+                    <img src="{% static 'svg/file-invoice-dollar-solid.svg' %}" style="height: 2rem;"/>
                     <div>
                         <span class="title fs-3">Beca por:</span> ${{ one.precio|to_int }} pesos<br>
                     </div>
                 </div>
             </div>
-            <p class="mt-3 fs-5">Para más información, consulte la página oficial de la institución.</p>
-            <a class="btn btn-styles title fs-3" href="{{ one.enroll }}">Postularse</a>
+
+            <a class="btn btn-styles fs-4" href="{{ one.enroll }}">Postularse</a>
+            <p class="mt-5 fs-5">Para más información, consulte la página oficial de la institución.</p>
         </div>
 
     {%endif%}
