--- a/cosmos/uni_app/templates/one.html
+++ b/cosmos/uni_app/templates/one.html
@@ -31,8 +31,7 @@
                         <h3 class="card-title title mb-0">CARRERAS</h3>
                     </div>
                     <div class="card-body">
-                        {%if carreras%}<ul>{% for i in carreras %}<li><a href="{% url 'main:one' 'carreras' i.id %}" class="links">{{i.name}}</a></li>{% endfor %}</ul>
-                        {%else%}<p>No hay carreras disponibles</p>{%endif%}
+                        <ul>{% for i in carreras %}<li class="mb-2"><a href="{% url 'main:one' 'carreras' i.id %}" class="links">{{i.name}}</a></li>{%empty%}<li>No hay carreras disponibles</li>{% endfor %}</ul>
                     </div>
                 </div>
                 <div class="card col-3 p-0">
@@ -40,8 +39,7 @@
                         <h3 class="card-title title mb-0">CURSOS</h3>
                     </div>
                     <div class="card-body">
-                        {%if cursos%}<ul>{% for i in cursos %}<li><a href="{% url 'main:one' 'cursos' i.id %}" class="links">{{i.name}}</a></li>{% endfor %}</ul>
-                        {%else%}<p>No hay cursos disponibles</p>{%endif%}
+                        <ul>{% for i in cursos %}<li class="mb-2"><a href="{% url 'main:one' 'cursos' i.id %}" class="links">{{i.name}}</a></li>{%empty%}<li>No hay cursos disponibles</li>{% endfor %}</ul>
                     </div>
                 </div>
                 <div class="card col-3 p-0">
@@ -49,8 +47,7 @@
                         <h3 class="card-title title mb-0">BECAS</h3>
                     </div>
                     <div class="card-body">
-                        {%if becas%}<ul>{% for i in becas %}<li><a href="{% url 'main:one' 'becas' i.id %}" class="links">{{i.name}}</a></li>{% endfor %}</ul>
-                        {%else%}<p>No hay becas disponibles</p>{%endif%}
+                        <ul>{% for i in becas %}<li class="mb-2"><a href="{% url 'main:one' 'becas' i.id %}" class="links">{{i.name}}</a></li>{%empty%}<li>No hay becas disponibles</li>{% endfor %}</ul>
                     </div>
                 </div>
             </div>
@@ -98,7 +95,25 @@
                 </div>
             </div>
             
-            <p class="mt-3 fs-5">Para más información, consulte la página oficial de la institución.</p>
+            <div class="row">
+                <div class="col-8">
+                    <p class="mt-3 fs-5">Para más información, consulte la página oficial de la institución.</p>
+                </div>
+                <div class="col-4 card p-0">
+                    <div class="card-header bg-cream">
+                        <h3 class="card-title title mb-0">Otras carreras...</h3>
+                    </div>
+                    <div class="card-body">
+                        <ul class="mb-0">
+                            {% for i in related %}<li class="mb-2"><a href="{% url 'main:one' type i.id %}" class="links">{{i.name}} - {{i.uni.name}}</a></li>{%endfor%}
+                        </ul>
+                        <form method="GET" action="{% url 'main:search' %}">
+                            <input type="hidden" name="cat" value="{{one.cat.id}}">
+                            <input type="submit" class="btn btn-styles" value="VER TODOS">
+                        </form>
+                    </div>
+                </div>
+            </div>
 
         </div>
 
@@ -141,8 +156,21 @@
                 </div>
             </div>
 
-            <a class="btn btn-styles fs-4" href="{{ one.enroll }}">Inscribirse</a>
-            <p class="mt-5 fs-5">Para más información, consulte la página oficial de la institución.</p>
+            <div class="row">
+                <div class="col-8">
+                    <a class="btn btn-styles fs-4" href="{{ one.enroll }}">Inscribirse</a>
+                    <p class="mt-5 fs-5">Para más información, consulte la página oficial de la institución.</p>
+                </div>
+                <div class="col-4 card p-0">
+                    <div class="card-header bg-cream">
+                        <h3 class="card-title title mb-0">Otros cursos...</h3>
+                    </div>
+                    <div class="card-body">
+                        <ul class="mb-0">{% for i in related %}<li class="mb-2"><a href="{% url 'main:one' type i.id %}" class="links">{{i.name}} - {{i.uni.name}}</a></li>{% endfor %}</ul>
+                        <a href="{% url 'main:many' type %}" class="btn btn-styles">VER TODOS</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
 
