--- a/cosmos/auth_app/templates/profile.html
+++ b/cosmos/auth_app/templates/profile.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}{% block title %} - Perfil{% endblock %}
 {% block content %}                          
 
+{% load static %}
+
 <div class="container mt-5 pt-4">
-    <h1 class="title text-center mb-4">Perfil</h1>
+    <h1 class="title text-center p-4 mb-4">PERFIL</h1>
     <div class="text-center">
-        {% load static %}
-        <img src="{% static 'img/perfil.png' %}" class="img-fluid rounded-circle" style="width: 10rem;" alt="Perfil"/>
+        <a href="{% url 'extra' %}"><img src="{% static 'img/banner.png' %}" class="w100" style="align-self: center;"/></a>
     </div>
-    <br>
+    <br><br>
 
     <form action="{% url 'extra' %}" method="POST" class="bg-light p-4 rounded">
         {% csrf_token %}
