--- a/cosmos/uni_app/templates/home.html
+++ b/cosmos/uni_app/templates/home.html
@@ -98,7 +98,7 @@
         </div>
         <div class="col-3 rounded p-3 bg-light">
             <h3 class="title">Apuntes a tu alcance</h3>
-            <p>Accedé a una variedad de materiales académicos de utilidad.</p>
+            <p>Accedé a una variedad de materiales académicos.</p>
             <a class="btn btn-styles" href="{% url 'extra' %}">VER MATERIAL</a>
         </div>
         <div class="col-3 rounded p-3 bg-light">
