--- a/cosmos/auth_app/templates/login.html
+++ b/cosmos/auth_app/templates/login.html
@@ -11,17 +11,17 @@
             </div>
 
             <div class="col-6">
-                <div class="card-body bg-light-reddish rounded-end">
+                <div class="card-body bg-cream rounded-end py-5">
                     <h1 class="card-title mb-3 fw-bold">Iniciar Sesión</h1>
-                    {%if 'invalid' in request.GET%} <div class="bg-cream rounded py-2 mb-3"><h3>ERROR formulario no válido!</h3></div>
-                    {%elif 'wronguser' in request.GET%}<div class="bg-cream rounded py-2 mb-3"><h3>ERROR usuario no válido!</h3></div>
+                    {%if 'invalid' in request.GET%} <div class="bg-light rounded py-2 mb-3"><p>Nombre de usuario y/o <br> contraseña incorrectos.</p></div>
+                    {%elif 'wronguser' in request.GET%}<div class="bg-light rounded py-2 mb-3"><p>Nombre de usuario y/o <br> contraseña incorrectos.</p></div>
                     {%endif%}
                     <form class="card-body p-0" action="#" method="POST">
                         {% csrf_token %}
                         <div class="mx-3">
                         {{form.as_p}}
                         </div>
-                        <input class="btn btn-counter mt-3 w-100" type="submit" value="Iniciar Sesión">
+                        <input class="btn btn-styles mt-3 w-100 text-white" type="submit" value="Iniciar Sesión">
                         <!--
                         <div class="col-6">
                             <div class="form-group form-check ms-4">
