--- a/cosmos/blog_app/templates/blog.html
+++ b/cosmos/blog_app/templates/blog.html
@@ -9,7 +9,7 @@
 
     <div class="row mt-4">
 
-        <div class="col-3 bg-cream sticky-col rounded-end p">
+        <div class="col-3 bg-cream sticky-col rounded-end">
             {% include "widgets/topic_filter.html" %}
         </div>
 
