--- a/cosmos/blog_app/templates/make.html
+++ b/cosmos/blog_app/templates/make.html
@@ -5,9 +5,9 @@
 
     <h2 class="title fs-1 mb-4 pt-4">Creación de posts</h2>
 
-    <div class="row">
+    <div class="row justify-content-center">
 
-        <form action="#" method="POST" class="bg-cream col-6 rounded offset-3 p-4">
+        <form action="#" method="POST" class="bg-cream col-9 rounded p-4">
             <div class="row">
                 <div class="col-6">
                     <h3 for="titleInput" class="form-label">Título</h3>
