--- a/cosmos/auth_app/templates/signin.html
+++ b/cosmos/auth_app/templates/signin.html
@@ -7,10 +7,10 @@
         {% load static %}
         {% if messages %}
         <br>
-        <div class="d-flex alert alert-light" role="alert" style="font-size: 1rem; padding: 10px;">
-            <img src="{% static 'svg/exclamation-triangle.svg' %}" style="width: 2rem; margin-right: 15px;"/>
+        <div class="d-flex alert alert-light align-items-center" role="alert" style="font-size: 1rem; padding: 10px;">
+            <img src="{% static 'svg/exclamation-triangle.svg' %}" style="width: 2rem;"/>
             {% for message in messages %}
-                <p class="mb-0 title text-black" style="font-size: 1.5rem;">{{ message }}</p>
+                <p class="ms-3 fs-5 mb-0 title">{{ message }}</p>
             {% endfor %}
         </div>
         {% endif %}
@@ -22,16 +22,15 @@
                 {% csrf_token %}
                 {% for field in form %}
                     <div class="form-group mb-3">
-                        <span class="title" style="font-size: 1.4rem;">{{ field.label_tag }} <br> </span>
+                        <span class="title fs-4">{{ field.label_tag }} <br> </span>
                         {{ field }}
                         {% if field.errors %}
                             <div class="error-message"> <br> {{ field.errors }}</div>
                         {% endif %}
                     </div>
                 {% endfor %}
+                <input class="mt-3 fs-3 btn btn-styles" type="submit" value="Registrarse">
             </div>
-            <br>
-            <input class="btn btn-styles" type="submit" value="Registrarse">
         </form>
     </div>
 
