--- a/cosmos/static/css/common.css
+++ b/cosmos/static/css/common.css
@@ -1,14 +1,8 @@
 /* --- RESPONSIVE SIZES --- */
 html {font-size: 16px;}
-@media (max-width: 768px) {
-    html {font-size: 10px;}
-}
-@media (max-width: 454px) {
-    html {font-size: 8px;}
-}
-@media (max-width: 364px) {
-    html {font-size: 6px;}
-}
+@media (max-width: 768px) {html {font-size: 10px;}}
+@media (max-width: 454px) {html {font-size: 8px;}}
+@media (max-width: 364px) {html {font-size: 6px;}}
 
 
 /* --- FONTS IMPORT --- */
@@ -33,7 +27,7 @@ body {font-family: 'Garet', sans-serif; font-size: larger;}
 
 .card img {width: 100%; height: 12.5rem; overflow: hidden; object-fit: cover;}
 
-.social-icons {display: flex; gap: .5rem;}
+.social-icons{display: flex; gap: .5rem;}
 
 .sticky-col{position: sticky; top: 5rem; height: 17.5rem;}
 
@@ -59,13 +53,6 @@ body {font-family: 'Garet', sans-serif; font-size: larger;}
 }
 
 
-/*.card {height: 350px; overflow: hidden;}
-.card-body {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}*/
-
 /* --- VIDEO RELATED --- */
 .video-container {/* Full viewport height */
     position: relative; width: 100%; height: 100vh; overflow: hidden;
@@ -81,31 +68,3 @@ body {font-family: 'Garet', sans-serif; font-size: larger;}
     background-color: rgba(0, 0, 0, 0.5); z-index: 1; /* Above video */
 }
 .content {position: relative; z-index: 2; color: white;}
-
-/*.section {
-    padding: 20px;
-    margin: 20px 0;
-    border-radius: 8px;
-    color: #333;
-}
-
-.card-container {
-    display: flex;
-    gap: 15px;
-    flex-wrap: wrap;
-}
-
-.card_div {
-    background-color: #FFFFFF;
-    border: 1px solid #E0E0E0;
-    padding: 15px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 200px;
-    text-align: center;
-}
-
-.stars {
-    color: #FFD700;
-    margin: 10px 0;
-}*/
