--- a/cosmos/uni_app/templates/many.html
+++ b/cosmos/uni_app/templates/many.html
@@ -5,9 +5,9 @@
 
     <h2 class="title fs-1 mb-4 pt-4">{{type|upper}}</h2>
     
-    <div class="row row-cols-4 g-4">
+    <div class="row g-4">
         {% for i in result %}
-        <div class="col">
+        <div class="col-sm-4 col-6">
             <div class="card h-100">
                 {% if type != "becas" %}
                 <img src="{{i.imgs.first.img.url}}" class="card-img-top" alt="{{i.name}}">
