--- a/cosmos/uni_app/templates/one.html
+++ b/cosmos/uni_app/templates/one.html
@@ -26,7 +26,7 @@
             </div>
             
             <div class="row justify-content-center gap-5">
-                <div class="card col-3 p-0">
+                <div class="card col-10 col-sm-3 p-0">
                     <div class="card-header bg-cream">
                         <h3 class="card-title title mb-0">CARRERAS</h3>
                     </div>
@@ -34,7 +34,7 @@
                         <ul>{% for i in carreras %}<li class="mb-2"><a href="{% url 'main:one' 'carreras' i.id %}" class="links">{{i.name}}</a></li>{%empty%}<li>No hay carreras disponibles</li>{% endfor %}</ul>
                     </div>
                 </div>
-                <div class="card col-3 p-0">
+                <div class="card col-10 col-sm-3 p-0">
                     <div class="card-header bg-cream">
                         <h3 class="card-title title mb-0">CURSOS</h3>
                     </div>
@@ -42,7 +42,7 @@
                         <ul>{% for i in cursos %}<li class="mb-2"><a href="{% url 'main:one' 'cursos' i.id %}" class="links">{{i.name}}</a></li>{%empty%}<li>No hay cursos disponibles</li>{% endfor %}</ul>
                     </div>
                 </div>
-                <div class="card col-3 p-0">
+                <div class="card col-10 col-sm-3 p-0">
                     <div class="card-header bg-cream">
                         <h3 class="card-title title mb-0">BECAS</h3>
                     </div>
@@ -96,10 +96,10 @@
             </div>
             
             <div class="row">
-                <div class="col-8">
+                <div class="col-6 col-sm-8">
                     <p class="mt-3 fs-5">Para más información, consulte la página oficial de la institución.</p>
                 </div>
-                <div class="col-4 card p-0">
+                <div class="col-6 col-sm-4 card p-0">
                     <div class="card-header bg-cream">
                         <h3 class="card-title title mb-0">Otras carreras...</h3>
                     </div>
@@ -157,11 +157,11 @@
             </div>
 
             <div class="row">
-                <div class="col-8">
+                <div class="col-6 col-sm-8">
                     <a class="btn btn-styles fs-4" href="{{ one.enroll }}">Inscribirse</a>
                     <p class="mt-5 fs-5">Para más información, consulte la página oficial de la institución.</p>
                 </div>
-                <div class="col-4 card p-0">
+                <div class="col-6 col-sm-4 card p-0">
                     <div class="card-header bg-cream">
                         <h3 class="card-title title mb-0">Otros cursos...</h3>
                     </div>
