--- a/cosmos/contact_app/templates/contact.html
+++ b/cosmos/contact_app/templates/contact.html
@@ -9,9 +9,21 @@
         Este proyecto facilita la búsqueda de diversas oportunidades académicas y profesionales. <br> Nuestro objetivo es ayudarte a encontrar la carrera, curso, beca o universidad que mejor se ajuste a tus intereses y aspiraciones.
     </p>
 </div>
-<div class="video-container">
+<div class="video-container rounded">
     <video class="video-background" src="{% static 'vid/contact.mp4' %}" autoplay loop muted playsinline></video>
     <div class="overlay"></div>
+</div>
+<div class="justify-content-center d-flex mt-5">
+    <div class="card bg-cream w-50">
+        <div class="card-body">
+            <h3 class="card-title title">Devs :p</h3>
+            <ul class="list-group rounded list-group-flush">
+                <li class="list-group-item" style="text-decoration: underline; color: #8d1515;">oviedo.cerdeira.lorenzo@gmail.com</li>
+                <li class="list-group-item" style="text-decoration: underline; color: #8d1515;">valucomvaz@gmail.com</li>
+                <li class="list-group-item" style="text-decoration: underline; color: #8d1515;">celesneyra@gmail.com</li>
+            </ul>
+        </div>
+    </div>
 </div>
 
 {% endblock %}
